Closed Bug 1722725 Opened 3 years ago Closed 3 years ago

Benign race in AsyncPanZoomController::SetTestAsyncScrollOffset

Categories

(Core :: Panning and Zooming, defect, P3)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox-esr91 --- fixed
firefox92 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

Attachments

(1 file)

This was triggered in the tsan builds. I think it is just used by tests and just needs an existing mutex to cover it.

This got tripped in the tsan tests, but should only happen during
testing.

Blocks: 1722726
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d5878ca886c5 Fix benign race in AsyncPanZoomController::SetTestAsyncScrollOffset. r=gfx-reviewers,jrmuizel
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Component: Graphics: WebRender → Panning and Zooming

Comment on attachment 9233515 [details]
Bug 1722725 - Fix benign race in AsyncPanZoomController::SetTestAsyncScrollOffset.

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: The race sometimes causes TSan failures on mozilla-esr91 CI runs, e.g. bug 1724318
  • User impact if declined: N/A
  • Fix Landed on Version:
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): test-only codepath
  • String or UUID changes made by this patch:
Attachment #9233515 - Flags: approval-mozilla-esr91?

Comment on attachment 9233515 [details]
Bug 1722725 - Fix benign race in AsyncPanZoomController::SetTestAsyncScrollOffset.

approved for 91.1esr

Attachment #9233515 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+

Is there a suppression which should be removed with this patch landed?

Flags: needinfo?(aosmond)

No, I fixed it in advance before turning on some tests it would have tripped on.

Flags: needinfo?(aosmond)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: