Bug 1722725 - Fix benign race in AsyncPanZoomController::SetTestAsyncScrollOffset. r=gfx-reviewers,jrmuizel

This got tripped in the tsan tests, but should only happen during
testing.

Differential Revision: https://phabricator.services.mozilla.com/D121092